themes/hugo-nuo/src/styles/partials/skeleton.scss
html {
  font-size: 16px;
  line-height: 1.618;
  font-family: $family-sans-serif;
}

body {
  color: $text;
  background: $background $background-image repeat fixed;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-feature-settings: "liga" on;
  -webkit-tap-highlight-color: transparent;
  -webkit-overflow-scrolling: touch; // Smoothly on mobile browser

  @media screen and (min-width: $tablet) {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
  }
}

a {
  color: $text-strong;
  opacity: 0.7;
  text-decoration: none;

  &:focus,
  &:hover {
    color: $black-ter;
    opacity: 1;
    outline: none;
  }
}

.site-header {
  width: 20rem;
  padding: 1rem;
  box-sizing: border-box;
  text-align: center;

  .is-active {
    a {
      opacity: 1;
      color: $text-strong;
      font-weight: $weight-bold;
    }
  }

  a {
    opacity: 0.5;
    color: $black-ter;

    &:focus,
    &:hover {
      opacity: 1;
      color: $text-strong;
    }
  }

  @media screen and (max-width: $tablet) {
    width: 100%;
    position: relative;
  }

  @media screen and (min-width: $tablet) {
    order: -1;
    flex-grow: 0;
  }
}

.main {
  padding: 1rem 2rem;
  max-width: 70rem;
  min-height: 100vh;
  box-sizing: border-box;
  border-left: 1px solid $main-border;
  border-right: 1px solid $main-border;
  box-shadow: 0 1px 4px $box-shadow;
  background: $main-background;

  .list-footer {
    padding: 1.5rem 0;
  }

  @media screen and (max-width: $widescreen) {
    width: calc(100% - 20rem);
  }

  @media screen and (max-width: $tablet) {
    margin-left: 0;
    padding: 0 1rem;
    width: 100%;
    min-height: initial;
    border-left: none;
    border-right: none;
    border-top: 1px solid $main-border;
    border-bottom: 1px solid $main-border;
  }

  @media screen and (min-width: $tablet) {
    order: 1;
    flex-grow: 1;
  }
}

.site-footer {
  display: none;

  @media screen and (max-width: $tablet) {
    display: block;
    padding: 2rem 1rem;
    color: $text;
    font-size: $size-7;
    text-align: center;
    font-family: $family-monospace;

    a {
      color: $text;
      opacity: 0.7;

      &:focus,
      &:hover {
        opacity: 1;
      }
    }
  }
}

